<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/audioin"
                />
            <ProgressBar
                android:id="@+id/pb_volume_mic"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="10"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:src="@drawable/audioout"
                android:maxHeight="6dp"
                />

            <ProgressBar
                android:id="@+id/pb_volume_spk"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:max="10"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_server"
                android:textSize="20sp"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_host"
                    android:textSize="18sp"
                    />
                <EditText
                    android:id="@+id/et_host"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_your_server"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/string_port"
                    android:textSize="18sp"
                    />
                <EditText
                    android:id="@+id/et_port"
                    android:inputType="number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/string_your_port"
                    />
            </LinearLayout>
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                >
                <RadioButton
                    android:id="@+id/radio_kcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_kcp_udp"
                    />
                <RadioButton
                    android:id="@+id/radio_tcp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_tcp"/>
            </RadioGroup>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                >
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ToggleButton
                        android:id="@+id/button_connect"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textOff="@string/string_connect"
                        android:textOn="Disconnect!"
                        android:textSize="40sp"
                        tools:ignore="RtlHardcoded"
                        />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="8dp"
                    >

                    <ImageView
                        android:id="@+id/iv_callUp"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/call_up"
                        />
                    <ImageView
                        android:id="@+id/iv_hangUp"
                        android:visibility="invisible"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/hang_up"
                        />
                </RelativeLayout>
            </FrameLayout>

            <TextView
                android:id="@+id/tv_place_phone_to_your_ear"
                android:visibility="invisible"
                android:text="Place phone to your ear"
                android:textSize="25sp"
                android:textAlignment="textEnd"
                android:textStyle="italic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>